Feat(board, column): column 순서 변경 기능 추가 및 board n+1 -> 1+1로 변경